<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mealbackground4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/catwork"
            android:layout_width="413dp"
            android:layout_height="252dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mealcat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mealsplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/mealplan"
            android:textColor="#084371"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/catwork" />

        <TextView
            android:id="@+id/chooseMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/choosemeal"
            android:textColor="#FFC3B0"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/catwork"
            app:layout_constraintStart_toStartOf="@+id/tvAnswer" />

        <EditText
            android:id="@+id/mealtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:background="#99ffffff"
            android:drawableLeft="@drawable/baseline_access_time_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="AM/PM"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/chooseMeal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/chooseMeal"
            app:layout_constraintTop_toTopOf="@+id/chooseMeal"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/calories"
            android:textColor="#E8C085"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/backbutton"
            app:layout_constraintStart_toStartOf="@+id/amount" />

        <Button
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#DAB74D"
            android:text="@string/backbutton"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:backgroundTint="#E4643B"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backbutton"
            app:layout_constraintEnd_toStartOf="@+id/backbutton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backbutton"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/amount"
            android:textColor="#0A5E56"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/calories"
            app:layout_constraintEnd_toEndOf="@+id/chooseMeal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageButton8"
            app:layout_constraintTop_toBottomOf="@+id/tvAnswer4"
            app:layout_constraintVertical_bias="0.615" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="#80ffffff"
            android:drawableLeft="@drawable/baseline_balance_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="Product amount"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"

            app:layout_constraintBottom_toBottomOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="@+id/mealtype"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toEndOf="@+id/amount"
            app:layout_constraintTop_toTopOf="@+id/amount"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/custom_button2_meal"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:background="@drawable/hold"
            android:onClick="subtract"
            android:text="Sub"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/custom_button_meal"
            app:layout_constraintStart_toStartOf="@+id/custom_button_meal"
            app:layout_constraintTop_toTopOf="@+id/imageButton7" />

        <Switch
            android:id="@+id/switch_enable_meal_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Enabled"
            android:textColor="@color/teal_200"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/custom_button2_meal"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/custom_button2_meal"
            app:layout_constraintTop_toBottomOf="@+id/custom_button2_meal" />

        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#80ffffff"
            android:drawableLeft="@drawable/baseline_monitor_weight_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="Total calories"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/calories"
            app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
            app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
            app:layout_constraintTop_toTopOf="@+id/calories" />

        <Button
            android:id="@+id/custom_button_meal"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:background="@drawable/fat"
            android:onClick="add"
            android:text="Add"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2" />

        <Switch
            android:id="@+id/switch_enable_meal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Enabled"
            android:textColor="@color/teal_200"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/custom_button_meal"
            app:layout_constraintTop_toBottomOf="@+id/custom_button_meal" />

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calories: "
            android:textColor="#912605"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/mealsplan"
            app:layout_constraintTop_toBottomOf="@+id/mealsplan" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:scaleType="fitCenter"
            android:src="@drawable/milk"
            app:layout_constraintBottom_toBottomOf="@+id/custom_button2_meal"
            app:layout_constraintEnd_toEndOf="@+id/imageButton6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageButton6"
            app:layout_constraintTop_toBottomOf="@+id/switch_enable_meal_button" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/vegetables"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/catwork" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bread"
            app:layout_constraintBottom_toBottomOf="@+id/custom_button_meal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/custom_button_meal" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/meat"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/tvAnswer11" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fruit"
            app:layout_constraintEnd_toEndOf="@+id/imageButton7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageButton7"
            app:layout_constraintTop_toBottomOf="@+id/tvAnswer3" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:scaleType="fitCenter"
            android:src="@drawable/candy"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton10"
            app:layout_constraintEnd_toEndOf="@+id/imageButton3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageButton3"
            app:layout_constraintTop_toBottomOf="@+id/switch_enable_meal_button2" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:scaleType="fitCenter"
            android:src="@drawable/oil"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
            app:layout_constraintEnd_toEndOf="@+id/custom_button2_meal"
            app:layout_constraintStart_toStartOf="@+id/custom_button2_meal"
            app:layout_constraintTop_toTopOf="@+id/imageButton8"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dairy:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton3"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <TextView
            android:id="@+id/tvAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Meat:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton7"
            app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

        <TextView
            android:id="@+id/tvAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fruits:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton8"
            app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

        <TextView
            android:id="@+id/tvAnswer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carbs:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton6"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        <TextView
            android:id="@+id/tvAnswer11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Veggies:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <TextView
            android:id="@+id/tvAnswer9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oil/Fat:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton10"
            app:layout_constraintTop_toBottomOf="@+id/imageButton10" />

        <TextView
            android:id="@+id/tvAnswer10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sweets:"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageButton9"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

